Edited wiki page through web user interface.

--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -22,7 +22,7 @@ void setup(void)
  * No properties.
 
 == Methods ==
- * <tt>[begin()]</tt> - prepares a pin for playing a tone.
- * <tt>[isPlaying()]</tt> - returns <tt>true</tt> if tone is playing, <tt>false</tt> if not.
- * <tt>[play()]</tt> - play a tone.
- * <tt>[stop()]</tt> - stop playing a tone.
+ * <tt>[CommandBegin begin]()</tt> - prepares a pin for playing a tone.
+ * <tt>[CommandIsPlaying isPlaying]()</tt> - returns <tt>true</tt> if tone is playing, <tt>false</tt> if not.
+ * <tt>[CommandPlay play]()</tt> - play a tone.
+ * <tt>[CommandStop]()</tt> - stop playing a tone.
